readme.md has been modified according to the dockerize installation instructions.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:d8l3Uq5NZPLuVVmi68/TqLyJUfhZET1MBa3cyd5/RLQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -21,13 +21,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=insider
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=laravel_db
+DB_USERNAME=laravel_user
+DB_PASSWORD=laravel_password
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -35,17 +35,19 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+QUEUE_CONNECTION=redis
+
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_CLIENT=predis
+REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_PASSWORD=null
+
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
@@ -65,3 +67,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 WEBHOOK_URL=""
+
